# opengl-firststep

./: .gitignore  CMakeLists.txt
shaders/: fragment.glsl
src/: FilePWD.cpp  FilePWD.h  main.cpp  shader.cpp  shader.h
